eagle_test/error/paren_bracket_brace_error.eagle
var a = (1, 2; // expected: [Error at line 1] At ';': Expect ')' at the end of tuple
var b = [1, 2; // expected: [Error at line 2] At ';': Expect ']' at the end of list
var c = {1: 2; // expected: [Error at line 3] At ';': Expect '}' at the end of dict
